--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "heycap-discovernow": "file:",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.15",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
